force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/clofor_com_cfs__ApplicationLine__c.object-meta.xml
<CustomObject>
    <label>Application Line</label>
    <nameField>
        <displayFormat>APLN-{000000}</displayFormat>
        <label>Application Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>