force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__Application__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Application__c</fullName>
    <label>Application</label>
    <referenceTo>clofor_com_cfs__Application__c</referenceTo>
    <relationshipLabel>APPLICATION LINE</relationshipLabel>
    <relationshipName>ApplicationLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>