force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__LineItemName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LineItemName__c</fullName>
    <label>Line Item Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>