force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__Plan__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Plan__c.clofor_com_cfs__Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.clofor_com_cfs__Product__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Plan__c</referenceTo>
    <relationshipLabel>APPLICATION LINE(PLAN)</relationshipLabel>
    <relationshipName>Plan</relationshipName>
    <type>Lookup</type>
</CustomField>