force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__Product__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>clofor_com_cfs__PRODUCT__c</referenceTo>
    <relationshipLabel>APPLICATION LINE</relationshipLabel>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>