force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__RemainedQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RemainedQuantity__c</fullName>
    <formula>clofor_com_cfs__Quantity__c -  clofor_com_cfs__ReturnedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remained Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>