force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__ReturnedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReturnedDate__c</fullName>
    <label>Returned Date</label>
    <type>Date</type>
</CustomField>