force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__ReturnedQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReturnedQuantity__c</fullName>
    <label>Returned Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>