force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__ReturnQuantityType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReturnQuantityType__c</fullName>
    <label>Return Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ReturnQuantityType</valueSetName>
    </valueSet>
</CustomField>