force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/fields/clofor_com_cfs__SlipNumber2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SlipNumber2__c</fullName>
    <label>Slip Number-2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>