force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/recordTypes/clofor_com_cfs__Product.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Product</fullName>
    <active>true</active>
    <label>Product</label>
</RecordType>