force-app/main/default/objects/clofor_com_cfs__ApplicationLine__c/recordTypes/clofor_com_cfs__Service.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Service</fullName>
    <active>true</active>
    <label>Service</label>
</RecordType>